# FraudRiskPlatform

./: .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
api/: main.py
app/: streamlit_app.py
docs/: architecture.md  demo.md
scripts/: benchmark_models.py  explain_model.py  generate_sample_data.py  prepare_kaggle_dataset.py  render_demo_assets.py  score_transactions.py  train_model.py
src/fraud_risk_platform/: __init__.py  config.py  data.py  explain.py  model.py  monitoring.py  rules.py  scoring.py
tests/: test_data_preparation.py  test_scoring.py
